@@ -39,6 +39,8 @@ Changes from 0.13.0
    * Fixed a crash when `with` suppresses an exception. `with` now returns
      `None` in this case.
    * Fixed a crash when --repl-output-fn raises an exception
+   * Fixed a crash when HyTypeError was raised with objects that had no
+     source position
    * `assoc` now evaluates its arguments only once each
    * `break` and `continue` now raise an error when given arguments
      instead of silently ignoring them
